--- a/src/cascadia/TerminalApp/lib/TerminalAppLib.vcxproj
+++ b/src/cascadia/TerminalApp/lib/TerminalAppLib.vcxproj
@@ -66,7 +66,9 @@
     <ClInclude Include="../TabRowControl.h">
       <DependentUpon>../TabRowControl.xaml</DependentUpon>
     </ClInclude>
-    <ClInclude Include="../Tab.h" />
+    <ClInclude Include="../Tab.h">
+      <DependentUpon>../Tab.idl</DependentUpon>
+    </ClInclude>
     <ClInclude Include="../Pane.h" />
     <ClInclude Include="../ColorScheme.h" />
     <ClInclude Include="../GlobalAppSettings.h" />
@@ -118,7 +120,9 @@
     <ClCompile Include="../TabRowControl.cpp">
       <DependentUpon>../TabRowControl.xaml</DependentUpon>
     </ClCompile>
-    <ClCompile Include="../Tab.cpp" />
+    <ClCompile Include="../Tab.cpp">
+      <DependentUpon>../Tab.idl</DependentUpon>
+    </ClCompile>
     <ClCompile Include="../Pane.cpp" />
     <ClCompile Include="../ColorScheme.cpp" />
     <ClCompile Include="../GlobalAppSettings.cpp" />
@@ -192,6 +196,7 @@
       <DependentUpon>../TabRowControl.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Midl>
+    <Midl Include="../Tab.idl"/>
   </ItemGroup>
   <!-- ========================= Misc Files ======================== -->
   <ItemGroup>
