--- a/src/cascadia/TerminalControl/TerminalControl.vcxproj.filters
+++ b/src/cascadia/TerminalControl/TerminalControl.vcxproj.filters
@@ -45,7 +45,7 @@
     <Natvis Include="$(SolutionDir)tools\ConsoleTypes.natvis" />
   </ItemGroup>
   <ItemGroup>
-    <PRIResource Include="Resources/en-US/Resources.resw">
+    <PRIResource Include="Resources/Resources.language-en.resw">
       <Filter>Resources</Filter>
     </PRIResource>
   </ItemGroup>
