Split IDeviceComm from ConDrvDeviceComm

--- a/src/server/lib/server.vcxproj
+++ b/src/server/lib/server.vcxproj
@@ -15,7 +15,7 @@
     <ClCompile Include="..\ApiMessage.cpp" />
     <ClCompile Include="..\ApiMessageState.cpp" />
     <ClCompile Include="..\ApiSorter.cpp" />
-    <ClCompile Include="..\DeviceComm.cpp" />
+    <ClCompile Include="..\ConDrvDeviceComm.cpp" />
     <ClCompile Include="..\DeviceHandle.cpp" />
     <ClCompile Include="..\Entrypoints.cpp" />
     <ClCompile Include="..\IoDispatchers.cpp" />
