--- a/src/cascadia/TerminalApp/lib/TerminalAppLib.vcxproj
+++ b/src/cascadia/TerminalApp/lib/TerminalAppLib.vcxproj
@@ -330,8 +330,8 @@
   <Target Name="_TerminalAppGenerateUserSettingsH" Inputs="..\userDefaults.json" Outputs="Generated Files\userDefaults.h" BeforeTargets="BeforeClCompile">
     <Exec Command="powershell.exe -noprofile –ExecutionPolicy Unrestricted $(OpenConsoleDir)\tools\GenerateHeaderForJson.ps1 -JsonFile ..\userDefaults.json -OutPath '&quot;Generated Files\userDefaults.h&quot;' -VariableName UserSettingsJson" />
   </Target>
-  <!-- Get the hash of the current commit we're on.-->
-  <Target Name="_CurrentBuildGitCommitHash" Outputs="Generated Files\CurrentCommitHash.h" BeforeTargets="BeforeClCompile">
+  <!-- Get the hash of the current git commit this build ison.-->
+  <Target Name="_GenerateCurrentCommitHashH" Outputs="Generated Files\CurrentCommitHash.h" BeforeTargets="BeforeClCompile">
     <Exec Command="powershell.exe -noprofile -ExecutionPolicy Unrestricted $(OpenConsoleDir)\tools\GenerateCommitHashHeader.ps1" />
   </Target>
 </Project>
