Create custom BoxDrawingEffect to specify when to do box drawing. Update CustomTextLayout to add a new analyzer pass to detect box drawing layouts and store a BoxDrawingEffect in the run. Add capability for Runs to hold a custom drawing effect. Pipe drawing effects all the way down. Make the glyph run drawing engine detect when a custom effect is applied and call a special method to perform the effect. Implement special effect for box drawing run based on the ol' manual glyph run drawing method, adjusting it to draw the outline as well as fill the geometries and also apply both a scale factor as well as the existing translation to the geometries.

--- a/src/renderer/dx/lib/dx.vcxproj.filters
+++ b/src/renderer/dx/lib/dx.vcxproj.filters
@@ -17,4 +17,7 @@
     <ClInclude Include="..\ScreenPixelShader.h" />
     <ClInclude Include="..\ScreenVertexShader.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Midl Include="..\IBoxDrawingEffect.idl" />
+  </ItemGroup>
 </Project>
