--- a/src/renderer/dx/lib/dx.vcxproj.filters
+++ b/src/renderer/dx/lib/dx.vcxproj.filters
@@ -8,6 +8,7 @@
     <ClCompile Include="..\CustomTextRenderer.cpp" />
     <ClCompile Include="..\precomp.cpp" />
     <ClCompile Include="..\DxRenderer.cpp" />
+    <ClCompile Include="..\BoxDrawingEffect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\CustomTextLayout.h" />
@@ -16,6 +17,7 @@
     <ClInclude Include="..\DxRenderer.hpp" />
     <ClInclude Include="..\ScreenPixelShader.h" />
     <ClInclude Include="..\ScreenVertexShader.h" />
+    <ClInclude Include="..\BoxDrawingEffect.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="..\IBoxDrawingEffect.idl" />
