Attempt to fix CI build of IDL. Scope IDL with local keyword to hopefully not generate useless proxy.

--- a/src/renderer/dx/lib/dx.vcxproj
+++ b/src/renderer/dx/lib/dx.vcxproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup>
     <Midl>
-      <OutputDirectory>..\</OutputDirectory>
+      <OutputDirectory>$(SolutionDir)src\renderer\dx\</OutputDirectory>
     </Midl>
   </ItemDefinitionGroup>
   <Import Project="$(SolutionDir)src\common.build.pre.props" />
