--- a/src/cascadia/ShellExtension/ShellExtension.vcxproj
+++ b/src/cascadia/ShellExtension/ShellExtension.vcxproj
@@ -47,5 +47,22 @@
     <None Include="ShellExtension.def" />
   </ItemGroup>
 
+  <!-- ========================= Project References ======================== -->
+  <ItemGroup>
+    <!--
+      the packaging project won't recurse through our dependencies, you have to
+      make sure that if you add a cppwinrt dependency to any of these projects,
+      you also update all the consumers
+    -->
+    <ProjectReference Include="$(OpenConsoleDir)src\types\lib\types.vcxproj">
+      <Project>{18D09A24-8240-42D6-8CB6-236EEE820263}</Project>
+    </ProjectReference>
+    <ProjectReference Include="$(OpenConsoleDir)src\cascadia\WinRTUtils\WinRTUtils.vcxproj">
+      <Project>{CA5CAD1A-039A-4929-BA2A-8BEB2E4106FE}</Project>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+    </ProjectReference>
+  </ItemGroup>
+
+
   <Import Project="$(OpenConsoleDir)src\cppwinrt.build.post.props" />
 </Project>
