--- a/src/dep/fmt/fmt.vcxproj
+++ b/src/dep/fmt/fmt.vcxproj
@@ -16,22 +16,10 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\oss\fmt\src\format.cc" />
-    <ClCompile Include="..\..\..\oss\fmt\src\os.cc" />
+    <ClCompile Include="$(SolutionDir)\oss\fmt\src\*.cc" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\oss\fmt\include\fmt\chrono.h" />
-    <ClInclude Include="..\..\..\oss\fmt\include\fmt\color.h" />
-    <ClInclude Include="..\..\..\oss\fmt\include\fmt\compile.h" />
-    <ClInclude Include="..\..\..\oss\fmt\include\fmt\core.h" />
-    <ClInclude Include="..\..\..\oss\fmt\include\fmt\format-inl.h" />
-    <ClInclude Include="..\..\..\oss\fmt\include\fmt\format.h" />
-    <ClInclude Include="..\..\..\oss\fmt\include\fmt\locale.h" />
-    <ClInclude Include="..\..\..\oss\fmt\include\fmt\os.h" />
-    <ClInclude Include="..\..\..\oss\fmt\include\fmt\ostream.h" />
-    <ClInclude Include="..\..\..\oss\fmt\include\fmt\posix.h" />
-    <ClInclude Include="..\..\..\oss\fmt\include\fmt\printf.h" />
-    <ClInclude Include="..\..\..\oss\fmt\include\fmt\ranges.h" />
+    <ClInclude Include="$(SolutionDir)\oss\fmt\include\fmt\*.h" />
   </ItemGroup>
   <!-- Careful reordering these. Some default props (contained in these files) are order sensitive. -->
   <Import Project="$(SolutionDir)src\common.build.post.props" />
