--- a/src/cascadia/WindowsTerminalUniversal/WindowsTerminalUniversal.vcxproj.filters
+++ b/src/cascadia/WindowsTerminalUniversal/WindowsTerminalUniversal.vcxproj.filters
@@ -13,96 +13,6 @@
   <ItemGroup>
     <None Include="PropertySheet.props" />
     <None Include="packages.config" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
-    <None Include="@(Content)" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Resources">
@@ -110,9 +20,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <PRIResource Include="Resources\en-US\Resources.resw" />
-    <PRIResource Include="Resources\Resources.resw" />
-    <PRIResource Include="Resources\Resources.devicefamily-core.resw" />
+    <PRIResource Include="Resources.devicefamily-core.resw">
+      <Filter>Resources</Filter>
+    </PRIResource>
+    <PRIResource Include="Resources\*\Resources.resw">
+      <Filter>Resources</Filter>
+    </PRIResource>
+    <PRIResource Include="Resources.resw">
+      <Filter>Resources</Filter>
+    </PRIResource>
   </ItemGroup>
   <ItemGroup>
     <Image Include="internal-background.png" />
