Move all wildcards into targets or expand them
Wildcards are not allowed in toplevel ItemGroups in vcxproj; they must
be generated by targets.

We mostly use wildcards for pulling in PRI files that are dumped on disk
by the translation tool. We don't want to check those in, so we can't
expand references to them.

To that end, I've introduced a new target that will take a list of
folders containing resw files and expand wildcards under them.

All[1] other wildcards have been moved into their respective targets
_or_ simply expanded.

[1]: Nothing has complained about the resource wildcards in
CascadiaResources.build.items, so I haven't exploded it yet.

Fixes #6214.

--- a/src/cascadia/WindowsTerminal/WindowsTerminal.vcxproj
+++ b/src/cascadia/WindowsTerminal/WindowsTerminal.vcxproj
@@ -120,13 +120,6 @@
     <ReasonablePlatform Condition="'$(Platform)'=='Win32'">x86</ReasonablePlatform>
     <ReasonablePlatform Condition="'$(ReasonablePlatform)'==''">$(Platform)</ReasonablePlatform>
   </PropertyGroup>
-
-  <ItemGroup Condition="'$(WindowsTerminalOfficialBuild)'=='true'">
-    <!-- Add all the CRT libs as content -->
-    <_OpenConsoleVCLibToCopy Include="$(VCToolsRedistInstallDir)\$(ReasonablePlatform)\Microsoft.VC142.CRT\*.dll">
-      <TargetPath>%(Filename)%(Extension)</TargetPath>
-    </_OpenConsoleVCLibToCopy>
-  </ItemGroup>
   <!-- **END VC LIBS HACK** -->
 
 
@@ -151,6 +144,15 @@
       ContinueOnError="$(_ContinueOnError)">
       <Output TaskParameter="TargetOutputs" ItemName="_PackagingOutputsFromOtherProjects"/>
     </MSBuild>
+
+    <!-- **BEGIN VC LIBS HACK** -->
+    <ItemGroup Condition="'$(WindowsTerminalOfficialBuild)'=='true'">
+      <!-- Add all the CRT libs as content -->
+      <_OpenConsoleVCLibToCopy Include="$(VCToolsRedistInstallDir)\$(ReasonablePlatform)\Microsoft.VC142.CRT\*.dll">
+        <TargetPath>%(Filename)%(Extension)</TargetPath>
+      </_OpenConsoleVCLibToCopy>
+    </ItemGroup>
+    <!-- **END VC LIBS HACK** -->
 
     <ItemGroup>
       <PackagingOutputs Include="@(_PackagingOutputsFromOtherProjects)" />
