shim: clean up init, commandline, give it a res file

--- a/src/cascadia/wt/wt.vcxproj
+++ b/src/cascadia/wt/wt.vcxproj
@@ -20,6 +20,10 @@
     </ClCompile>
   </ItemGroup>
 
+  <ItemGroup>
+    <ResourceCompile Include="wt.rc" />
+  </ItemGroup>
+
   <Import Project="$(OpenConsoleDir)src\common.build.post.props" />
 
   <ItemDefinitionGroup>
