--- a/src/cascadia/TerminalApp/lib/TerminalAppLib.vcxproj.filters
+++ b/src/cascadia/TerminalApp/lib/TerminalAppLib.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="../Commandline.cpp" />
     <ClCompile Include="../ColorHelper.cpp" />
     <ClCompile Include="../DebugTapConnection.cpp" />
+    <ClCompile Include="../CommandSerialization.cpp">
+      <Filter>settings</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="../Utils.h" />
@@ -117,6 +120,9 @@
     <ClInclude Include="../TelnetGenerator.h">
       <Filter>profileGeneration</Filter>
     </ClInclude>
+    <ClInclude Include="../CommandSerialization.h">
+      <Filter>settings</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Midl Include="../AppLogic.idl">
@@ -134,11 +140,10 @@
     <Midl Include="../Tab.idl">
       <Filter>tab</Filter>
     </Midl>
+    <Midl Include="../IF7Listener.idl" />
     <Midl Include="../Command.idl">
       <Filter>commandPalette</Filter>
     </Midl>
-    <Midl Include="../IDirectKeyListener.idl" />
-    <Midl Include="../CommandKeyChordVisibilityConverter.idl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="../packages.config" />
