--- a/src/til/ut_til/til.unit.tests.vcxproj.filters
+++ b/src/til/ut_til/til.unit.tests.vcxproj.filters
@@ -15,7 +15,7 @@
     <ClCompile Include="OperatorTests.cpp" />
     <ClCompile Include="MathTests.cpp" />
     <ClCompile Include="BaseTests.cpp" />
-    <ClCompile Include="spscTests.cpp" />
+    <ClCompile Include="SPSCTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\precomp.h" />
